Dtsstci 373 - Audit Unit Tests in Case API Services Module (#1685)
* Audited Test files and their classes.

* Audited Test files 2

* Audited Module Services

* Audited Test Module Services

* Revert "Audited Test files 2"

This reverts commit 7d3f37b9d2bf5b5a7ffed4faf8aba876baef7eee.

* Revert "Audited Test files and their classes."

This reverts commit 18e46ab3b86b3c144623832086591da0156faa4d.

* Fix Checkstyle

* Added Test in CaseApiServiceTest

* Fix sonarcloud Issue

* Amended Test

* Removed @SupressWarnings("PMD")

* Added Test for overloaded method.

* Fix warning and log statements

* Added 2 test to cover Exception

* Fix Sonarcloud

---------

Co-authored-by: Tom Elliott <tomlaelliott@gmail.com>